[package]
name = "aoc23"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bitflags = "2.4.1"
clap = { version = "4.4.10", features = ["derive"] }
colored = "2.1.0"
itertools = "0.10.5"
macro_rules_attribute = "0.2.0"
num = "0.4.1"
once_cell = "1.18.0"
pixel-canvas = "0.2.3"
rayon = "1.8.0"
regex = "1.10.2"
take-until = "0.1.0"
thiserror = "1.0.50"

[[bin]]
name = "day1"
path = "src/day1/main.rs"

[[bin]]
name = "day2"
path = "src/day2/main.rs"

[[bin]]
name = "day3"
path = "src/day3/main.rs"

[[bin]]
name = "day4"
path = "src/day4/main.rs"

[[bin]]
name = "day5"
path = "src/day5/main.rs"

[[bin]]
name = "day6"
path = "src/day6/main.rs"

[[bin]]
name = "day7"
path = "src/day7/main.rs"

[[bin]]
name = "day8"
path = "src/day8/main.rs"

[[bin]]
name = "day9"
path = "src/day9/main.rs"

[[bin]]
name = "day10"
path = "src/day10/main.rs"

[[bin]]
name = "day10_visu"
path = "src/day10/with_visuals.rs"

[[bin]]
name = "day11"
path = "src/day11/main.rs"

[[bin]]
name = "day13"
path = "src/day13/main.rs"

[[bin]]
name = "day14"
path = "src/day14/main.rs"

[[bin]]
name = "day15"
path = "src/day15/main.rs"

[[bin]]
name = "day16"
path = "src/day16/main.rs"

[[bin]]
name = "day17"
path = "src/day17/main.rs"
